--- a/estilo.css
+++ b/estilo.css
@@ -3,6 +3,27 @@
     padding: 0;
     box-sizing: border-box;
 }
+:root{
+    --text-color: white;
+    --bg-url:url(./assets/assets/bg-mobile.jpg);
+    --stroke-color:rgba(255, 255, 255, 0.05);
+    --surface-color:rgba(255,255,255,0.02);
+    --surface-color-hover:rgba(0, 0, 0, 0.2);
+    --highlight-color:rgba(255, 255, 255, 0.2);
+    --switch-bg-url:url(./assets/assets/moon-stars.svg);
+
+
+}
+    .light{
+        --text-color: black;
+        --bg-url:url(./assets/assets/bg-mobile-light.jpg);
+        --stroke-color: rgba(0, 0, 0, 0.5);
+        --surface-color:rgba(0, 0, 0, 0.05);  
+        --surface-color-hover:rgba(0, 0, 0, 0.02);
+        --highlight-color:rgba(0, 0, 0, 0.1);
+        --switch-bg-url:url(./assets/assets/sun.svg);
+    }
+
 body{
     /*
     background-image: url(./assets/assets/bg-mobile.jpg);
@@ -11,12 +32,12 @@ body{
     background-size: cover;
     */
     /*background: color image repeat position/size */
-    background: url(./assets/assets/bg-mobile.jpg) no-repeat top center/cover;
+    background: var(--bg-url) no-repeat top center/cover;
     
 }
 body *{
     font-family: "Inter", sans-serif;
-    color: white;
+    color: var(--text-color); 
 }
 /*:root{
     --gradient: linear-gradient(
@@ -30,10 +51,11 @@ body *{
     /*border: 5px solid red;
     border-image: var(--gradient)1;*/
     width: 360px; 
-    margin: auto;
-    margin-top: 56px;
+    margin: 56px auto 0px;
+    padding: 0 24px;
 
 }
+/*profile*/
 #profile{
     text-align: center;
     padding: 24px;
@@ -46,11 +68,52 @@ font-weight: 500;
 line-height: 24px;
 margin-top: 8px;
 }
+
+/*switch*/
+
+#switch {
+    position: relative;
+    width: 64px;
+
+    margin: 4px auto;
+}
+
+#switch button {
+    width: 32px;
+    height: 32px;
+    background: white var(--switch-bg-url) no-repeat center;
+    border: 0;
+    border-radius: 50%;
+
+    position: absolute;
+    top: 50%;
+    left: 0;
+    z-index: 1;
+    transform: translateY(-50%);
+}
+
+.light #switch button{
+    right: 0;
+    left: initial;
+}
+#switch span {
+    display: block;
+    width: 64px;
+    height: 24px;
+    border: 1px solid var(--stroke-color);
+    background: var(--surface-color);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    border-radius: 9999px;
+
+}
 ul{
     list-style: none;
     display:flex;
     flex-direction: column;
     gap: 16px;
+
+    padding: 24px 0px;
 }
 ul li a{ 
     display: flex;
@@ -59,13 +122,49 @@ ul li a{
     
     padding: 16px 24px;
 
-    background: rgba(255, 255, 255, 0.1);
-
-    border: 1px solid rgba(255, 255, 255, 0.5);
+    background: var(--surface-color);
+    border: 1px solid var(--stroke-color);
     border-radius: 8px;
+
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
 
     text-decoration: none;
     font-weight: 500;
+
+    transition: background 0.2s;
+}
+/*pseudo-selector*/
+ul li a:hover{
+background: var(--surface-color-hover);
+border: 1.5px solid var(--text-color);
+/*social_linkls*/
+}
+#social_links{
+    display: flex;
+
+    justify-content: center;
+
+    padding: 24px;
+
+    font-size: 24px;
+}
+#social_links a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 16px;
+    
+    border-radius: 50px;
+    transition: background 0.2s;
+
+}
+#social_links a:hover{
+    background: var(--highlight-color);
+
+}
+footer{
+    padding: 24px 0;
+    text-align: center;
+    font-size: 14px;
 }
