--- a/estilo.css
+++ b/estilo.css
@@ -50,7 +50,8 @@ body *{
 #container{
     /*border: 5px solid red;
     border-image: var(--gradient)1;*/
-    width: 360px; 
+    width: 100%;
+    max-width: 588; 
     margin: 56px auto 0px;
     padding: 0 24px;
 
