add width max 588px

--- a/estilo.css
+++ b/estilo.css
@@ -52,7 +52,7 @@ body *{
     /*border: 5px solid red;
     border-image: var(--gradient)1;*/
     width: 100%;
-    max-width: 588; 
+    max-width: 588px; 
     margin: 56px auto 0px;
     padding: 0 24px;
 
